tests/compile_fail/handle_scope_escape_lifetime.stderr
error[E0597]: `hs1` does not live long enough
  --> $DIR/handle_scope_escape_lifetime.rs:11:15
   |
9  |   let _fail = {
   |       ----- borrow later stored here
10 |     let mut hs1 = v8::HandleScope::new(hs0);
11 |     let hs1 = hs1.enter();
   |               ^^^ borrowed value does not live long enough
...
18 |   };
   |   - `hs1` dropped here while still borrowed
